outline of html for questions and answers

--- a/index.html
+++ b/index.html
@@ -19,7 +19,29 @@
 
 <body>
 
+<div class="header">
+
 <h1>Totally Random Trivia Game!</h1>
+
+</div>  
+
+<div class="timer">
+
+
+</div>
+
+<div class="questionScript">
+    <div>
+        <h3>Question</h3>
+        <p>enter question</p>
+        <form>
+            <input type="radio" name="gender" value="male" checked> Male<br>
+            <input type="radio" name="gender" value="female"> Female<br>
+            <input type="radio" name="gender" value="other"> Other  
+        </form> 
+
+    </div>
+</div>
 
 
 
