testing out switch statement to use to generate questions and answers

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -19,33 +20,120 @@
 
 <body>
 
-<div class="header">
+    <div class="header">
+        <h1>Totally Random Trivia Game!</h1>
+    </div>
 
-<h1>Totally Random Trivia Game!</h1>
+    <div class="timer">
 
-</div>  
-
-<div class="timer">
-
-
-</div>
-
-<div class="questionScript">
-    <div>
-        <h3>Question</h3>
-        <p>enter question</p>
-        <form>
-            <input type="radio" name="gender" value="male" checked> Male<br>
-            <input type="radio" name="gender" value="female"> Female<br>
-            <input type="radio" name="gender" value="other"> Other  
-        </form> 
 
     </div>
-</div>
+
+    <div class="questionScript">
+        <div id="question1" onclick="">
+            <h3>Question 1</h3>
+            <p>enter question</p>
+            <form>
+                <input type="radio" name="gender" value="male" checked> Male<br>
+                <input type="radio" name="gender" value="female"> Female<br>
+                <input type="radio" name="gender" value="other"> Other
+            </form>
+        </div>
+
+        <div id="question2" onclick="">
+            <h3>Question 2</h3>
+            <p>enter question</p>
+            <form>
+                <input type="radio" name="gender" value="male" checked> Male<br>
+                <input type="radio" name="gender" value="female"> Female<br>
+                <input type="radio" name="gender" value="other"> Other
+            </form>
+        </div>
+
+        <div id="question3" onclick="">
+            <h3>Question 3</h3>
+            <p>enter question</p>
+            <form>
+                <input type="radio" name="gender" value="male" checked> Male<br>
+                <input type="radio" name="gender" value="female"> Female<br>
+                <input type="radio" name="gender" value="other"> Other
+            </form>
+        </div>
+
+        <div id="question4" onclick="">
+            <h3>Question 4</h3>
+            <p>enter question</p>
+            <form>
+                <input type="radio" name="gender" value="male" checked> Male<br>
+                <input type="radio" name="gender" value="female"> Female<br>
+                <input type="radio" name="gender" value="other"> Other
+            </form>
+        </div>
+
+        <div id="question5" onclick="">
+            <h3>Question 5</h3>
+            <p>enter question</p>
+            <form>
+                <input type="radio" name="gender" value="male" checked> Male<br>
+                <input type="radio" name="gender" value="female"> Female<br>
+                <input type="radio" name="gender" value="other"> Other
+            </form>
+        </div>
+
+        <div id="question6" onclick="">
+            <h3>Question 6</h3>
+            <p>enter question</p>
+            <form>
+                <input type="radio" name="gender" value="male" checked> Male<br>
+                <input type="radio" name="gender" value="female"> Female<br>
+                <input type="radio" name="gender" value="other"> Other
+            </form>
+        </div>
+
+        <div id="question7" onclick="">
+            <h3>Question 7</h3>
+            <p>enter question</p>
+            <form>
+                <input type="radio" name="gender" value="male" checked> Male<br>
+                <input type="radio" name="gender" value="female"> Female<br>
+                <input type="radio" name="gender" value="other"> Other
+            </form>
+        </div>
+
+        <div id="question8" onclick="">
+            <h3>Question 8</h3>
+            <p>enter question</p>
+            <form>
+                <input type="radio" name="gender" value="male" checked> Male<br>
+                <input type="radio" name="gender" value="female"> Female<br>
+                <input type="radio" name="gender" value="other"> Other
+            </form>
+        </div>
+
+        <div id="question9" onclick="">
+            <h3>Question 9</h3>
+            <p>enter question</p>
+            <form>
+                <input type="radio" name="gender" value="male" checked> Male<br>
+                <input type="radio" name="gender" value="female"> Female<br>
+                <input type="radio" name="gender" value="other"> Other
+            </form>
+        </div>
+
+        <div id="question10" onclick="">
+            <h3>Question 10</h3>
+            <p>enter question</p>
+            <form>
+                <input type="radio" name="gender" value="male" checked> Male<br>
+                <input type="radio" name="gender" value="female"> Female<br>
+                <input type="radio" name="gender" value="other"> Other
+            </form>
+        </div>
+    </div>
 
 
 
-    
+
 </body>
 
 
