add the timer function to the game

--- a/index.html
+++ b/index.html
@@ -30,105 +30,13 @@
     </div>
 
     <div class="questionScript">
-        <div id="question1" onclick="">
-            <h3>Question 1</h3>
-            <p>enter question</p>
-            <form>
-                <input type="radio" name="gender" value="male" checked> Male<br>
-                <input type="radio" name="gender" value="female"> Female<br>
-                <input type="radio" name="gender" value="other"> Other
-            </form>
-        </div>
-
-        <div id="question2" onclick="">
-            <h3>Question 2</h3>
-            <p>enter question</p>
-            <form>
-                <input type="radio" name="gender" value="male" checked> Male<br>
-                <input type="radio" name="gender" value="female"> Female<br>
-                <input type="radio" name="gender" value="other"> Other
-            </form>
-        </div>
-
-        <div id="question3" onclick="">
-            <h3>Question 3</h3>
-            <p>enter question</p>
-            <form>
-                <input type="radio" name="gender" value="male" checked> Male<br>
-                <input type="radio" name="gender" value="female"> Female<br>
-                <input type="radio" name="gender" value="other"> Other
-            </form>
-        </div>
-
-        <div id="question4" onclick="">
-            <h3>Question 4</h3>
-            <p>enter question</p>
-            <form>
-                <input type="radio" name="gender" value="male" checked> Male<br>
-                <input type="radio" name="gender" value="female"> Female<br>
-                <input type="radio" name="gender" value="other"> Other
-            </form>
-        </div>
-
-        <div id="question5" onclick="">
-            <h3>Question 5</h3>
-            <p>enter question</p>
-            <form>
-                <input type="radio" name="gender" value="male" checked> Male<br>
-                <input type="radio" name="gender" value="female"> Female<br>
-                <input type="radio" name="gender" value="other"> Other
-            </form>
-        </div>
-
-        <div id="question6" onclick="">
-            <h3>Question 6</h3>
-            <p>enter question</p>
-            <form>
-                <input type="radio" name="gender" value="male" checked> Male<br>
-                <input type="radio" name="gender" value="female"> Female<br>
-                <input type="radio" name="gender" value="other"> Other
-            </form>
-        </div>
-
-        <div id="question7" onclick="">
-            <h3>Question 7</h3>
-            <p>enter question</p>
-            <form>
-                <input type="radio" name="gender" value="male" checked> Male<br>
-                <input type="radio" name="gender" value="female"> Female<br>
-                <input type="radio" name="gender" value="other"> Other
-            </form>
-        </div>
-
-        <div id="question8" onclick="">
-            <h3>Question 8</h3>
-            <p>enter question</p>
-            <form>
-                <input type="radio" name="gender" value="male" checked> Male<br>
-                <input type="radio" name="gender" value="female"> Female<br>
-                <input type="radio" name="gender" value="other"> Other
-            </form>
-        </div>
-
-        <div id="question9" onclick="">
-            <h3>Question 9</h3>
-            <p>enter question</p>
-            <form>
-                <input type="radio" name="gender" value="male" checked> Male<br>
-                <input type="radio" name="gender" value="female"> Female<br>
-                <input type="radio" name="gender" value="other"> Other
-            </form>
-        </div>
-
-        <div id="question10" onclick="">
-            <h3>Question 10</h3>
-            <p>enter question</p>
-            <form>
-                <input type="radio" name="gender" value="male" checked> Male<br>
-                <input type="radio" name="gender" value="female"> Female<br>
-                <input type="radio" name="gender" value="other"> Other
-            </form>
-        </div>
+        <div id="startBtn">Start Game</div>
+        <p>Time Remaining:<span id="timer"></span></p>
+        <h3>Question<span id="questionCount">1</span></h3>
+        <div id="question"></div>
+        <div id="answers"></div>
+        <div id="resetBtn">Play again?</div>
+            
     </div>
 
 
