added to click event outcomes using an if/else statement for right and wrong questions

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
         <h3>Question<span id="questionCount">1</span></h3>
         <div id="question"></div>
         <div id="answers"></div>
+        <div id="message"></div>
         <div id="resetBtn">Play again?</div>
             
     </div>
