--- a/index.html
+++ b/index.html
@@ -6,45 +6,35 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-    <!-- linked JQuery -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-
     <!-- linked stylesheets -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="./assets/css/style.css">
-
-    <!-- linked javascript -->
-    <script src="./assets/javascript/app.js"></script>
 
     <title>Trivia Game</title>
 </head>
 
 <body>
 
-    <div class="header">
-        <h1>Totally Random Trivia Game!</h1>
-    </div>
-
-    <div class="timer">
-
-
-    </div>
-
-    <div class="questionScript">
-        <div id="startBtn">Start Game</div>
-        <p>Time Remaining:<span id="timer"></span></p>
-        <h3>Question<span id="questionCount">1</span></h3>
-        <div id="question"></div>
-        <div id="answers"></div>
-        <div id="message"></div>
-        <div id="resetBtn">Play again?</div>
-            
+    <div class="container">
+        <div class="jumbotron">
+            <h1>Totally Random Trivia Game!<h1> 
+            <button class="btn btn-primary">Start the Game!</button>  
+        </div>
     </div>
 
 
 
+    <div id="timer"></div>
+
+    <div id="questionScript"></div>
+
+
+<!-- linked JQuery -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>       
+
+<!-- linked javascript -->
+<script src="./assets/javascript/app.js"></script>
 
 </body>
-
-
 
 </html>
