--- a/index.html
+++ b/index.html
@@ -6,35 +6,36 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-    <!-- linked stylesheets -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="./assets/css/style.css">
-
     <title>Trivia Game</title>
+    <!-- linked stylesheets -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 
 <body>
 
     <div class="container">
         <div class="jumbotron">
-            <h1>Totally Random Trivia Game!<h1> 
-            <button class="btn btn-primary">Start the Game!</button>  
+            <h1>Totally Random Trivia Game!<h1>
+                    <button class="btn btn-primary" id="start">Start the Game!</button>
         </div>
+        <h2 id="time"></h2>
+
+        <div id="game"></div>
     </div>
 
 
 
-    <div id="timer"></div>
 
-    <div id="questionScript"></div>
+    <!-- linked JQuery -->
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"
+        integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
 
-
-<!-- linked JQuery -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>       
-
-<!-- linked javascript -->
-<script src="./assets/javascript/app.js"></script>
+    <!-- linked javascript -->
+    <script src="./assets/javascript/app.js"></script>
 
 </body>
+
 
 </html>
