added remaining images for right/wrong answers and tested

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <!-- linked stylesheets -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Modak&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 
@@ -17,12 +18,12 @@
 
     <div class="container">
         <div class="jumbotron">
-            <h1>Totally Random Trivia Game!<h1>
+            <h1> A Totally <span class="text-primary">Random</span> Trivia Game!<h1>
                     <button class="btn btn-primary" id="start">Start the Game!</button>
         </div>
         <h2 id="time"></h2>
 
-        <div id="game"></div>
+        <div id="game"> <div class="choice text-primary"></div></div>
     </div>
 
 
